test/library/packages/UnrolledLinkedList/pop/testPopIndexHaltBadIndex.good
testPopIndexHaltBadIndex.chpl:10: error: halt reached - out of bounds on unrolledLinkedList
